Added joining room functionality

--- a/Backend/Backend/appsettings.json
+++ b/Backend/Backend/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "SecurityKey": "MyVeryOwnSecurityKey",
-    "Issuer": "MyVeryOwnIssuer",
-    "Audience": "https://localhost:4200",
-    "ExpirationTimeInMinutes": 90000
+    "SecurityKey": "T@6ZDFjLiW^@H$F%A3ej%c@2",
+    "ExpirationTimeInMinutes": "15",
+    "Issuer": "https://localhost:50133/",
+    "Audience": "https://localhost:50133/"
   },
   "ConnectionStrings": {
     "BackendContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Backend;Trusted_Connection=True;MultipleActiveResultSets=true; TrustServerCertificate=True"
