--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,13 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
-    "bootstrap": "^5.2.1",
     "eslint": "8.22.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
-    "redux-persist": "^6.0.0",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
